--- a/charts/service/templates/ingress.yaml
+++ b/charts/service/templates/ingress.yaml
@@ -1,5 +1,5 @@
 {{- if .Values.ingress.enabled -}}
-{{- $fullName := include "service.fullname" . -}}
+{{- $fullName := include "service.name" . -}}
 {{- $svcPort := .Values.service.port -}}
 {{- if and .Values.ingress.ingressClassName (not (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion)) }}
   {{- if not (hasKey .Values.ingress.annotations "kubernetes.io/ingress.class") }}
